# clawdbot_remote

./: .backup.env  .backup.env.example  .env  .env.example  .env.save  .gitignore  .gitmodules  AGENT-BOARD.md  AGENT-SYSTEM-PACK.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  USER.md  agent-zero  agent-zero-data  fix_ids.js  fix_maintenance.js  fix_ts.js  organize_files.sh  package-lock.json  package.json  tmp_syncthing_device_add.json
.clawhub/: lock.json
.openclaw/: workspace-state.json
Branding/: ALTERNATE_BRAND_QUICK_REFERENCE.md  ALTERNATE_BRAND_STYLE_GUIDE.md  BRAND_QUICK_REFERENCE.md  BRAND_STYLE_GUIDE.md  STYLE_COMPARISON.md
The Future/: property_os_model_contract_api_v1_5_1_openapi.yaml  property_os_model_contract_api_v1_5_1_schemas.json  property_os_model_contract_api_v1_5_openapi.yaml  property_os_model_contract_api_v1_5_schemas.json  property_os_model_contract_spec.json  property_os_model_contract_spec.md  property_os_model_contract_spec_v1_3.json  property_os_model_contract_spec_v1_3.md  property_os_model_contract_spec_v1_5.json  property_os_model_contract_spec_v1_5.md  property_os_stability_engine.json  property_os_stability_engine.md
Vocal_Book_Project/: INCLUDED_FILES.md  Vocal_Repertoire_Training_Book.md  Vocal_Repertoire_Training_Book_v2.md  (+1 more)
automations/: INDEX.md  (+1 more)
python-sdk/: README.md  pyproject.toml
python-sdk/agent_sdk/: __init__.py
python-sdk/agent_sdk/audit/: __init__.py  logger.py
python-sdk/agent_sdk/ceeg/: __init__.py  schema_validate.py  validate.py
python-sdk/agent_sdk/cli/: __main__.py  tea_log_result.py  tea_validate_and_log.py
(+428 files in other folders)
