[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawd-agent-sdk"
version = "0.1.0"
description = "Agent SDK (Python) for TEA/CEEG validation + audit logging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_sdk*"]
